# Korgi

./: CMakeLists.txt  README.md
src/: control_surface_map.cpp  control_surface_map.h  main.cpp
